# Wildfire-Forecaster-App

./: .replit  LICENSE  README.md  main.py  pyproject.toml  replit.md  replit.nix
attached_assets/: Pasted--This-is-the-final-corrected-backend-server-code-for-your-Replit-project-It-loads-the-model-fr-1758043479757_1758043479761.txt
computer_use_demo/: loop.py  streamlit.py
computer_use_demo/tools/: computer.py
template/: index.html
wildfire_app/: wildfire_cause_model.pkl  wildfire_risk_model.pkl
